Fix overflow on edit tutorial card

--- a/src/app/sub-components/edit-tutorial-card/edit-tutorial-card.component.sass
+++ b/src/app/sub-components/edit-tutorial-card/edit-tutorial-card.component.sass
@@ -12,6 +12,15 @@ mat-card-content
         -webkit-box-orient: vertical
         min-height: 51px
 
+mat-card-title
+        overflow: hidden
+        display: -webkit-box
+        -webkit-line-clamp: 1
+        -webkit-box-orient: vertical
+        min-height: 12px
+        max-width: 265px
+        text-overflow: ellipsis
+
 .thumbnail
     min-width: 330px
     max-width: 330px
